@@ -28,6 +28,8 @@ Extension Modules
 Library
 -------
 
+- The ConfigParser module has been renamed to configparser.
+
 - Issue 2865: webbrowser.open() works again in a KDE environment.
 
 - The multifile module has been removed.
